# doldol

./: .gitignore  ChangeLog.md  FlagManager.cabal  Issues.md  Plans.md  README.md  Results.md  doldol.cabal  package.yaml
Data/: Flag.hs  FlagManager.hs
DevLog/: Design anyReq and allReq.md  Problem with `Traversable`.md  The type of Flag.md  UsingMagicHash.md
Documents/: Survey.2017-03-02.md  Survey.2019-07.md
Test/: Test.hs  TestEnv.hs
src/Data/: Flag.hs
src/Data/Flag/: Internal.hs  Phantom.hs  Simple.hs
test/: Spec.hs  Test.hs  TestDeeqSeq.hs  TestPhantom.hs  TestSerial.hs
test/Test/: Flag.hs  TestEnv.hs  Visualize.hs
test/Test/Flag/: DeepSeq.hs  Env.hs  Phantom.hs  Serial.hs
