name:                   doldol
version:                0.1.3.0
-- synopsis:               
-- description:            
-- homepage:               http://dev.quietjoon.net/projects/doldol
homepage:               http://dev.quietjoon.net
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
-- copyright:              
category:               Data
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Data.Flag
  -- other-modules:        
  -- other-extensions:     
  build-depends:        base >=4.9 && <4.10
                      , ghc-prim >=0.5
  -- hs-source-dirs:       
  default-language:     Haskell2010
