name:                   doldol
version:                0.2.0.0
synopsis:               Flag packer & handler for flaggable data
homepage:               http://dev.quietjoon.net/projects/doldol.html
bug-reports:            https://github.com/QuietJoon/doldol/issues
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
copyright:              2017 YongJoon Joe
category:               Data
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Data.Flag
                      , Data.Flag.Internal
                      , Data.Flag.Phantom
                      , Data.Flag.Simple
  build-depends:        base >=4.8
                      , deepseq
  default-language:     Haskell2010
  hs-source-dirs:       src
source-repository head
  type:     git
  location: https://github.com/QuietJoon/doldol.git
